trying normal vh to fix buggy scroll snap on iphone

--- a/css/sectionstyles.css
+++ b/css/sectionstyles.css
@@ -43,9 +43,6 @@ section {
     #home{
         height: 100dvh;
     }
-    section{
-        min-height: 100dvh;
-    }
 }
 
 
